--- a/index.html
+++ b/index.html
@@ -1,74 +1,32 @@
-const playlists = [
-  "Chill",
-  "Workout",
-  "Focus",
-];
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Yousef’s Media Player</title>
+  <link rel="stylesheet" href="style.css" />
+</head>
+<body>
+  <div class="app">
+    <header>
+      <h1>🎧 Yousef’s Media Player</h1>
+      <p>Select a playlist and enjoy your music!</p>
+    </header>
 
-const container = document.getElementById("playlist-container");
-const currentSong = document.getElementById("current-song");
-const playBtn = document.getElementById("play");
-const nextBtn = document.getElementById("next");
-const prevBtn = document.getElementById("prev");
+    <div id="playlist-container" class="playlist-container"></div>
 
-let audio = new Audio();
-let currentPlaylist = [];
-let currentIndex = 0;
-let isPlaying = false;
+    <div class="player">
+      <div class="song-info">
+        <span id="current-song">No song playing</span>
+      </div>
+      <div class="controls">
+        <button id="prev">⏮</button>
+        <button id="play">▶️</button>
+        <button id="next">⏭</button>
+      </div>
+    </div>
+  </div>
 
-// Render playlists
-playlists.forEach(name => {
-  const div = document.createElement("div");
-  div.className = "playlist";
-  div.innerText = name;
-  div.onclick = () => loadPlaylist(name);
-  container.appendChild(div);
-});
-
-async function loadPlaylist(name) {
-  const url = `playlists/${name}/`;
-  currentPlaylist = [];
-
-  // Fetch list of songs (GitHub Pages doesn't support directory listing)
-  // So you manually list them in script.js or use a JSON manifest.
-  // Example below assumes fixed files:
-  currentPlaylist = [
-    `${url}song1.mp3`,
-    `${url}song2.mp3`,
-  ];
-
-  currentIndex = 0;
-  playSong();
-}
-
-function playSong() {
-  if (currentPlaylist.length === 0) return;
-  audio.src = currentPlaylist[currentIndex];
-  currentSong.textContent = `🎵 ${currentPlaylist[currentIndex].split("/").pop()}`;
-  audio.play();
-  isPlaying = true;
-  playBtn.textContent = "⏸";
-}
-
-playBtn.onclick = () => {
-  if (!audio.src) return;
-  if (isPlaying) {
-    audio.pause();
-    playBtn.textContent = "▶️";
-  } else {
-    audio.play();
-    playBtn.textContent = "⏸";
-  }
-  isPlaying = !isPlaying;
-};
-
-nextBtn.onclick = () => {
-  if (currentPlaylist.length === 0) return;
-  currentIndex = (currentIndex + 1) % currentPlaylist.length;
-  playSong();
-};
-
-prevBtn.onclick = () => {
-  if (currentPlaylist.length === 0) return;
-  currentIndex = (currentIndex - 1 + currentPlaylist.length) % currentPlaylist.length;
-  playSong();
-};
+  <script src="script.js"></script>
+</body>
+</html>
