--- a/index.html
+++ b/index.html
@@ -1,32 +1,61 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Yousef’s Media Player</title>
-  <link rel="stylesheet" href="style.css" />
+<meta charset="utf-8" />
+<meta name="viewport" content="width=device-width,initial-scale=1" />
+<title>MediaPlayer — Spotify Style</title>
+<link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <div class="app">
-    <header>
-      <h1>🎧 Yousef’s Media Player</h1>
-      <p>Select a playlist and enjoy your music!</p>
-    </header>
+<div class="app">
+  <!-- LEFT: Playlists -->
+  <aside class="sidebar">
+    <div class="brand">
+      <div class="logo">🎧</div>
+      <div class="title">MediaPlayer</div>
+      <div class="sub muted">GitHub: <span id="ghUser">YousefTantawy</span> / <span id="ghRepo">MediaPlayer</span></div>
+    </div>
+    <div class="info muted" id="status">Loading repo...</div>
+    <div id="playlists" class="playlist-list" role="navigation" aria-label="Playlists"></div>
+  </aside>
 
-    <div id="playlist-container" class="playlist-container"></div>
+  <!-- CENTER: Songs -->
+  <main class="center">
+    <div class="header">
+      <h2 id="heading">Playlists</h2>
+      <div class="muted" id="subinfo">Select a playlist</div>
+    </div>
 
-    <div class="player">
-      <div class="song-info">
-        <span id="current-song">No song playing</span>
+    <div id="songsWrap" class="songs-wrap" aria-live="polite"></div>
+  </main>
+
+  <!-- RIGHT: Queue -->
+  <aside class="queue-panel">
+    <div class="queue-title">Queue</div>
+    <div id="queueList" class="queue-list" aria-live="polite"></div>
+  </aside>
+
+  <!-- BOTTOM: Player -->
+  <footer class="bottom">
+    <div class="now-playing" id="nowPlaying">Welcome — loading repo...</div>
+
+    <div class="controls">
+      <div class="buttons">
+        <button id="prevBtn" class="small-btn" title="Previous">⏮</button>
+        <button id="playBtn" class="play-btn" title="Play/Pause">▶</button>
+        <button id="nextBtn" class="small-btn" title="Next">⏭</button>
       </div>
-      <div class="controls">
-        <button id="prev">⏮</button>
-        <button id="play">▶️</button>
-        <button id="next">⏭</button>
+
+      <div class="seek-row">
+        <div class="time" id="timeLabel">00:00 / 00:00</div>
+        <input id="seek" type="range" min="0" max="100" step="0.1" value="0">
       </div>
     </div>
-  </div>
+  </footer>
+</div>
 
-  <script src="script.js"></script>
+<audio id="audio" crossorigin="anonymous"></audio>
+
+<script src="script.js"></script>
 </body>
 </html>
